--- a/views/User/home.ejs
+++ b/views/User/home.ejs
@@ -1,15 +1,39 @@
-<%- include("../partials/user/header.ejs") %>
+<!DOCTYPE html>
+<html lang="en">
+
+
+<!-- molla/index-12.html  22 Nov 2019 09:58:43 GMT -->
+<head>
+    <meta charset="UTF-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
+    <title>Beep Sounds</title>
+    <meta name="keywords" content="HTML5 Template">
+    <meta name="description" content="Molla - Bootstrap eCommerce Template">
+    <meta name="author" content="p-themes">
+
+    <!-- Plugins CSS File -->
+    <link rel="stylesheet" href="assets/css/bootstrap.min.css">
+    <link rel="stylesheet" href="assets/css/plugins/owl-carousel/owl.carousel.css">
+    <link rel="stylesheet" href="assets/css/plugins/magnific-popup/magnific-popup.css">
+    <!-- Main CSS File -->
+    <link rel="stylesheet" href="assets/css/style.css">
+    <link rel="stylesheet" href="assets/css/demos/demo-12.css">
+</head>
+
+<body>
+    <div class="page-wrapper">
+        <%- include("../partials/user/header.ejs") %>
         <main class="main">
             <div class="intro-slider-container mb-3 mb-lg-5">
                 <div class="intro-slider owl-carousel owl-simple owl-nav-inside owl-light" data-toggle="owl" data-owl-options='{"nav":false, "dots": false, "loop": false}'>
                     <div class="intro-slide" style="background-image: url(assets/images/demos/demo-12/slider/slide-1.jpg);">
                         <div class="container intro-content text-center">
-                            <h3 class="intro-subtitle text-white">SEASONAL PICKS</h3><!-- End .h3 intro-subtitle -->
-                            <h1 class="intro-title text-white">Get All The Good Stuff</h1><!-- End .intro-title -->
+                        
+                            <h1 class="intro-title text-white">IMMERSE YOURSELF</h1><!-- End .intro-title -->
 
                             <a href="category.html" class="btn btn-outline-white">
-                                <span>DISCOVER MORE</span>
-                                <i class="icon-long-arrow-right"></i>
+                                <span>Shop Now</span>
                             </a>
                         </div><!-- End .intro-content -->
                     </div><!-- End .intro-slide -->
@@ -17,13 +41,17 @@
 
                 <span class="slider-loader text-white"></span><!-- End .slider-loader -->
             </div><!-- End .intro-slider-container -->
-
+            <div class="heading text-center mb-4">
+                <h1 class="title">Our Pick</h1> <!-- End .title -->
+             </div>
             <div class="container">
                 <div class="row">
                     <div class="col-md-6">
                         <div class="banner banner-display banner-link-anim banner-title-hidden">
                             <a href="#">
+                            <div class="banner-1">
                                 <img src="assets/images/demos/demo-12/banners/banner-1.jpg" alt="Banner">
+                            </div>
                             </a>
 
                             <div class="banner-content banner-content-center">
@@ -36,17 +64,21 @@
                     <div class="col-md-6">
                         <div class="banner banner-display banner-link-anim banner-title-hidden">
                             <a href="#">
-                                <img src="assets/images/demos/demo-12/banners/banner-2.jpg" alt="Banner">
+                                <div class="banner-2">
+                                    <img src="assets/images/demos/demo-12/banners/banner-2.jpg" alt="Banner">
+                                </div>
                             </a>
 
                             <div class="banner-content banner-content-center">
-                                <h3 class="banner-title text-white"><a href="#">Bags by Mood</a></h3><!-- End .banner-title -->
-                                <a href="#" class="btn btn-outline-white banner-link">Discover Now</a>
+                                <h3 class="banner-title text-white"><a href="#">ON STAGE</a></h3><!-- End .banner-title -->
+                                <a href="#" class="btn btn-outline-white banner-link">Shop</a>
                             </div><!-- End .banner-content -->
                         </div><!-- End .banner -->
                         <div class="banner banner-display banner-link-anim banner-title-hidden">
                             <a href="#">
-                                <img src="assets/images/demos/demo-12/banners/banner-3.jpg" alt="Banner">
+                                <div class="banner-3">
+                                    <img src="assets/images/demos/demo-12/banners/banner-3.jpg" alt="Banner">
+                                </div>
                             </a>
 
                             <div class="banner-content banner-content-center">
@@ -63,9 +95,8 @@
             <div class="bg-lighter pt-5 pb-5 mb-5">
                 <div class="container">
                     <div class="heading text-center mb-4">
-                        <h2 class="title">Recent Arrivals</h2><!-- End .title -->
-                        <p class="title-desc">Aliquam tincidunt mauris eurisus</p><!-- End .title-desc -->
-                    </div><!-- End .heading -->
+                        <h1 class="title">Recent Arrivals</h1><!-- End .title -->
+                     </div><!-- End .heading -->
 
                     <div class="owl-carousel owl-simple" data-toggle="owl" 
                         data-owl-options='{
@@ -283,15 +314,16 @@
 
             <div class="container">
                 <div class="heading text-center mb-4">
-                    <h2 class="title">Popular Categories</h2><!-- End .title -->
-                    <p class="title-desc">Vestibulum auctor dapibus neque</p><!-- End .title-desc -->
+                    <h1 class="title">Popular Categories</h1><!-- End .title -->
                 </div><!-- End .heading -->
 
                 <div class="row">
                     <div class="col-sm-6 col-lg-4">
                         <div class="banner banner-display banner-link-anim">
                             <a href="#">
-                                <img src="assets/images/demos/demo-12/banners/banner-4.jpg" alt="Banner">
+                                <div class="banner-4">
+                                    <img src="assets/images/demos/demo-12/banners/banner-4.jpg" alt="Banner">
+                                </div>
                             </a>
 
                             <div class="banner-content banner-content-center">
@@ -305,12 +337,13 @@
                     <div class="col-sm-6 col-lg-4 order-lg-last">
                         <div class="banner banner-display banner-link-anim">
                             <a href="#">
-                                <img src="assets/images/demos/demo-12/banners/banner-5.jpg" alt="Banner">
+                                <div class="banner-5">
+                                    <img src="assets/images/demos/demo-12/banners/banner-5.jpg" alt="Banner">
+                                </div>
                             </a>
 
                             <div class="banner-content banner-content-center">
                                 <h3 class="banner-title text-white"><a href="#">Jewellery</a></h3><!-- End .banner-title -->
-                                <h4 class="banner-subtitle text-white"><a href="#">8 Items</a></h4><!-- End .banner-subtitle -->
                                 <a href="#" class="btn btn-outline-white banner-link">Shop Now</a>
                             </div><!-- End .banner-content -->
                         </div><!-- End .banner -->
@@ -321,7 +354,9 @@
                             <div class="col-sm-6 col-lg-12">
                                 <div class="banner banner-display banner-link-anim">
                                     <a href="#">
-                                        <img src="assets/images/demos/demo-12/banners/banner-6.jpg" alt="Banner">
+                                        <div class="banner-6">
+                                            <img src="assets/images/demos/demo-12/banners/banner-6.jpg" alt="Banner">
+                                        </div> 
                                     </a>
 
                                     <div class="banner-content banner-content-center">
@@ -335,7 +370,9 @@
                             <div class="col-sm-6 col-lg-12">
                                 <div class="banner banner-display banner-link-anim">
                                     <a href="#">
-                                        <img src="assets/images/demos/demo-12/banners/banner-7.jpg" alt="Banner">
+                                        <div class="banner-7">
+                                            <img src="assets/images/demos/demo-12/banners/banner-7.jpg" alt="Banner">
+                                        </div>                                    
                                     </a>
 
                                     <div class="banner-content banner-content-center">
@@ -408,25 +445,7 @@
             </div><!-- End .container -->
         </main><!-- End .main -->
 
-        <footer class="footer footer-2">
-            <div class="footer-bottom">
-                <div class="container">
-                    <p class="footer-copyright">Copyright © 2019 Molla Store. All Rights Reserved.</p><!-- End .footer-copyright -->
-                    <ul class="footer-menu">
-                        <li><a href="#">Terms Of Use</a></li>
-                        <li><a href="#">Privacy Policy</a></li>
-                    </ul><!-- End .footer-menu -->
-
-                    <div class="social-icons social-icons-color">
-                        <a href="#" class="social-icon social-facebook" title="Facebook" target="_blank"><i class="icon-facebook-f"></i></a>
-                        <a href="#" class="social-icon social-twitter" title="Twitter" target="_blank"><i class="icon-twitter"></i></a>
-                        <a href="#" class="social-icon social-instagram" title="Instagram" target="_blank"><i class="icon-instagram"></i></a>
-                        <a href="#" class="social-icon social-youtube" title="Youtube" target="_blank"><i class="icon-youtube"></i></a>
-                        <a href="#" class="social-icon social-pinterest" title="Pinterest" target="_blank"><i class="icon-pinterest"></i></a>
-                    </div><!-- End .soial-icons -->
-                </div><!-- End .container -->
-            </div><!-- End .footer-bottom -->
-        </footer><!-- End .footer -->
+       <%- include("../partials/user/footer.ejs")%>
     </div><!-- End .page-wrapper -->
     <button id="scroll-top" title="Back to Top"><i class="icon-arrow-up"></i></button>
 
@@ -601,7 +620,8 @@
             </div><!-- End .social-icons -->
         </div><!-- End .mobile-menu-wrapper -->
     </div><!-- End .mobile-menu-container -->
-    <%- include("../partials/user/footer.ejs") %>
+
+    
     <!-- Plugins JS File -->
     <script src="assets/js/jquery.min.js"></script>
     <script src="assets/js/bootstrap.bundle.min.js"></script>
